force-app/main/default/objects/Budget_line__c/Budget_line__c.object-meta.xml
<CustomObject>
    <label>Budget line</label>
    <nameField>
        <label>Budget line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>