force-app/main/default/objects/Budget_line__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>לא ניתן להצמיד סעיף שאינו פעיל לא לתשלום ולא לקרן סיוע</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>