force-app/main/default/objects/Budget_line__c/fields/Budget_Line_frm__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_frm__c</fullName>
    <formula>Designation__c &amp; &quot;.&quot; &amp;
Unit__c &amp; &quot;.&quot; &amp;
Program__c &amp; &quot;.&quot; &amp;
Account__c &amp; &quot;.&quot; &amp;
Project__c &amp; &quot;.&quot; &amp;
Region__c &amp; &quot;.&quot; &amp;
Company__c &amp; &quot;.&quot; &amp;
Future__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Line frm</label>
    <type>Text</type>
</CustomField>