force-app/main/default/objects/Budget_line__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>