force-app/main/default/objects/Budget_line__c/fields/Future__c.field-meta.xml
<CustomField>
    <fullName>Future__c</fullName>
    <label>Future</label>
    <length>2</length>
    <type>Text</type>
</CustomField>