force-app/main/default/objects/Budget_line__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>6</length>
    <type>Text</type>
</CustomField>