force-app/main/default/objects/Budget_line__c/fields/Total_amount_budgeted_in_NIS__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_budgeted_in_NIS__c</fullName>
    <label>Total amount budgeted (in NIS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>