force-app/main/default/objects/Budget_line__c/fields/Total_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_paid__c</fullName>
    <inlineHelpText>סך הסכום בתשלומים הקשורים אשר אושרו לתשלום</inlineHelpText>
    <label>Total amount paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>