force-app/main/default/objects/Budget_line__c/validationRules/cannot_change_budget_line_if_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_change_budget_line_if_Active</fullName>
    <active>true</active>
    <description>Budget cannot be changed if Active</description>
    <errorConditionFormula>AND(Active__c = True,
ISCHANGED(Budget_Line_frm__c)
)</errorConditionFormula>
    <errorMessage>לא ניתן לשנות שורת תקציב פעילה</errorMessage>
</ValidationRule>